# Auspex

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh  server.py  setup.sh
api/: __init__.py  _github.py  analytics.py  routes.py  webhook.py
core/: config.py  llm.py  patching.py  rate_limit.py  sandbox.py  sanitization.py  usage.py
dashboard/: Home.py  _api_client.py  _styles.py
dashboard/pages/: 1_🛡️_Live_Review.py  2_📊_Analytics.py
fixtures/demo_files/: auth.py  utils.py
graph/: __init__.py  builder.py  state.py
graph/nodes/: __init__.py  analysis.py  apply_fix.py  fix_generation.py  human_review.py  ingestion.py  learning.py  retrieval.py  self_evaluation.py
models/: __init__.py  schemas.py
retrieval/: __init__.py  reranker.py  vector_store.py
reviewers/: __init__.py  _aggregation.py  _result.py  _schema.py  bug_hunter.py  critic.py  heuristics.py  performance_reviewer.py  prompts.py  security_scanner.py
scripts/: trigger_mock_pr.py
telemetry/: __init__.py  pricing.py  tracer.py
tests/: conftest.py  test_aggregation.py  test_analytics.py  test_heuristics.py  test_patching.py  test_pricing.py  test_sandbox.py  test_sanitization.py  test_usage.py
